--- a/client/src/scss/theme/variables.scss
+++ b/client/src/scss/theme/variables.scss
@@ -184,7 +184,7 @@
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
 
-    --ion-background-color: #1b1b20;
+    --ion-background-color: #0d0d0d;
     --ion-background-color-rgb: 27, 27, 32;
     --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255, 255, 255;
